<resources>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_registration1">RegistrationActivity1</string>
    <string name="title_activity_logout__screen">Logout_Screen</string>
    <string name="title_activity_banned__unbanned">Banned_Unbanned</string>
    <string name="ban">I WANT TO BE UNBANNED</string>
    <string name="warning">You have been banned from your account.</string>
    <string name="newItem">New Item</string>
    <string name="cancelLogin">Cancel Login</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="forgotPassword">FORGOT PASSWORD</string>
    <string name="bannedPage">BANNED PAGE</string>
    <string name="itemList">Item List</string>
    <string name="logout">LOGOUT</string>
    <string name="registerNewUser">REGISTER NEW USER</string>
    <string name="newEmail">Create New Email: </string>
    <string name="newPassword">Create New Password:</string>
    <string name="createNewItem">Create New Item</string>
    <string name="missingItem">What item is missing?</string>
    <string name="submitItem">SUBMIT ITEM</string>
    <string name="search_hint">Enter an item name…</string>
    <string name="title_activity_maps">Map</string>
    <string name="maps_view">Maps View</string>
    <string name="login">LOG IN</string>
</resources>
