<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="58dp"
            android:text="@string/createNewItem" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="26dp"
            android:labelFor="@+id/item_name"
            android:text="@string/missingItem" />

        <EditText
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="text"
            android:layout_below="@+id/textView4"
            android:layout_alignStart="@+id/textView4" />

        <Button
            android:id="@+id/submit_new_item_buttom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/item_name"
            android:layout_below="@+id/item_name"
            android:layout_marginTop="25dp"
            android:text="@string/submitItem" />
    </RelativeLayout>
</LinearLayout>
