<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.RB.rebasejumpers.RegistrationActivity1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="58dp"
            android:text="@string/registerNewUser" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="18dp"
            android:labelFor="@+id/user_email_string"
            android:text="@string/newEmail" />

        <AutoCompleteTextView
            android:id="@+id/user_email_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:inputType="textNoSuggestions|textEmailAddress"
            android:layout_below="@+id/textView3"
            android:layout_alignStart="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/user_email_string"
            android:layout_below="@+id/user_email_string"
            android:layout_marginTop="26dp"
            android:labelFor="@+id/password_string"
            android:text="@string/newPassword" />

        <EditText
            android:id="@+id/password_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_below="@+id/textView4"
            android:layout_alignStart="@+id/textView4" />

        <Button
            android:id="@+id/registration_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/register"
            android:layout_below="@+id/password_string"
            android:layout_alignStart="@+id/password_string" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
